@@ -69,11 +69,11 @@
 	CCTextureAtlas			*textureAtlas_;			// Sprite Sheet texture atlas (weak reference)
 	NSUInteger				atlasIndex_;			// Absolute (real) Index on the batch node
 	CCSpriteBatchNode		*batchNode_;			// Used batch node (weak reference)
-	BOOL					dirty_:1;				// Sprite needs to be updated
-	BOOL					recursiveDirty_:1;		// Subchildren needs to be updated
-	BOOL					hasChildren_:1;			// optimization to check if it contain children
-	BOOL					shouldBeHidden_:1;		// should not be drawn because one of the ancestors is not visible
 	CGAffineTransform		transformToBatch_;		//
+	bool					dirty_:1;				// Sprite needs to be updated
+	bool					recursiveDirty_:1;		// Subchildren needs to be updated
+	bool					hasChildren_:1;			// optimization to check if it contain children
+	bool					shouldBeHidden_:1;		// should not be drawn because one of the ancestors is not visible
 
 	//
 	// Data used when the sprite is self-rendered
@@ -89,7 +89,7 @@
 	CGRect	rect_;
 
 	// texture
-	BOOL	rectRotated_:1;
+	bool	rectRotated_:1;
 
 	// Offset Position (used by Zwoptex)
 	CGPoint	offsetPosition_;
@@ -102,15 +102,15 @@
 	GLubyte		opacity_;
 	ccColor3B	color_;
 	ccColor3B	colorUnmodified_;
-	BOOL		opacityModifyRGB_:1;
+	bool		opacityModifyRGB_:1;
 
 	// image is flipped
-	BOOL	flipX_:1;
-	BOOL	flipY_:1;
+	bool	flipX_:1;
+	bool	flipY_:1;
 }
 
 /** whether or not the Sprite needs to be updated in the Atlas */
-@property (nonatomic,readwrite) BOOL dirty;
+@property (nonatomic,readwrite) bool dirty;
 /** the quad (tex coords, vertex coords and color) information */
 @property (nonatomic,readonly) ccV3F_C4B_T2F_Quad quad;
 /** The index used on the TextureAtlas. Don't modify this value unless you know what you are doing */
@@ -118,7 +118,7 @@
 /** returns the texture rect of the CCSprite in points */
 @property (nonatomic,readonly) CGRect textureRect;
 /** returns whether or not the texture rectangle is rotated */
-@property (nonatomic,readonly) BOOL textureRectRotated;
+@property (nonatomic,readonly) bool textureRectRotated;
 /** whether or not the sprite is flipped horizontally.
  It only flips the texture of the sprite, and not the texture of the sprite's children.
  Also, flipping the texture doesn't alter the anchorPoint.
@@ -126,7 +126,7 @@
 
 	sprite.scaleX *= -1;
  */
-@property (nonatomic,readwrite) BOOL flipX;
+@property (nonatomic,readwrite) bool flipX;
 /** whether or not the sprite is flipped vertically.
  It only flips the texture of the sprite, and not the texture of the sprite's children.
  Also, flipping the texture doesn't alter the anchorPoint.
@@ -134,7 +134,7 @@
 
 	sprite.scaleY *= -1;
  */
-@property (nonatomic,readwrite) BOOL flipY;
+@property (nonatomic,readwrite) bool flipY;
 /** opacity: conforms to CCRGBAProtocol protocol */
 @property (nonatomic,readwrite) GLubyte opacity;
 /** RGB colors: conforms to CCRGBAProtocol protocol */
